fix: :lipstick: fix white space on the right of the screen on mobile device

--- a/client/src/scss/_dsfr-fix.scss
+++ b/client/src/scss/_dsfr-fix.scss
@@ -22,6 +22,16 @@
   font-size: 0.75rem;
 }
 
+.fr-header .fr-header__navbar {
+  align-items: center;
+  align-self: center;
+  padding: 0;
+  button {
+    max-height: 2.4rem;
+    max-width: 2.4rem;
+  }
+}
+
 [dir="rtl"],
 [dir="rtl"] .fr-footer__top-cat,
 [dir="rtl"] .fr-nav__list > * > .fr-nav__btn,
